Prevent non_functional from overflowing our top tags display.

--- a/src/gwt/public/item/item.css
+++ b/src/gwt/public/item/item.css
@@ -45,6 +45,8 @@
 
 .tagCloud .Link {
   padding: 0px 8px 4px 8px;
+  max-width: 60px;
+  overflow: hidden;
 }
 
 .itemDetailPanel .headerBox .Title {
